syntax = "proto3";

option csharp_namespace = "ClienteGrpc";

package nominate;

service Nominator {
  rpc GetFullName(NameRequest) returns (NameReply);
}

message NameRequest {
  string lastName = 1;
  string firstName = 2;
}

message NameReply {
  string message = 1;
}
